[gd_scene load_steps=5 format=3 uid="uid://8npyicd1iw1n"]

[ext_resource type="Script" uid="uid://c0m8leljkyyhw" path="res://scripts/Character/player_character.gd" id="1_v6fml"]
[ext_resource type="Texture2D" uid="uid://dn5ok3eoqtrmu" path="res://sprites/Tilemap/tilemap_packed.png" id="2_3li8b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mdl7e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v6fml"]
radius = 20.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_v6fml")
_maxSpeed = 500.0
_maxAccel = 750.0
_knockback_intensity = 100.0
metadata/_custom_type_script = "uid://c0m8leljkyyhw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mdl7e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3li8b")
region_enabled = true
region_rect = Rect2(16, 112, 16, 16)

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_v6fml")

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_ended"]
